--- a/.github/workflows/lint_and_test.yml
+++ b/.github/workflows/lint_and_test.yml
@@ -4,32 +4,30 @@ name: Lint and Test
 on: [push, pull_request]
 
 jobs:
-  fmt:
-    name: fmt
+  lint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - run: rustup update
-      - run: rustup component add rustfmt
+      - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@stable
+        with:
+          components: rustfmt,clippy
       - run: cargo fmt -- --check
+      - run: cargo clippy --all-targets
 
-  clippy:
+  test:
     name: clippy
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - run: rustup update
-      - run: rustup component add clippy
-      - run: cargo clippy --all --all-targets --all-features
-
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-        with:
-          submodules: true
-      - run: rustup update
-      - run: cargo build --all-features
-      - run: cargo test --verbose --all --all-features
+      - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@stable
+      - run: cargo build
+      - run: cargo test --verbose --all
         env:
           RUST_BACKTRACE: 1
+
+  miri-test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@nightly
+      - run: cargo +nightly miri test
