fix github action
now that the 'bench' target requires an additional feature,
--all-features must be added to clippy

--- a/.github/workflows/lint_and_test.yml
+++ b/.github/workflows/lint_and_test.yml
@@ -12,7 +12,7 @@ jobs:
         with:
           components: rustfmt,clippy
       - run: cargo fmt -- --check
-      - run: cargo clippy --all-targets
+      - run: cargo clippy --all-targets --all-features
 
   test:
     runs-on: ubuntu-latest
