--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "mownstr"
 description = "Maybe Owned String"
-version = "0.3.0"
+version = "0.3.1"
 authors = ["Pierre-Antoine Champin <pchampin@liris.cnrs.fr>"]
 edition = "2021"
 repository = "https://github.com/pchampin/mownstr"
@@ -16,11 +16,9 @@ keywords = ["string", "wrapper"]
 criterion = { version="0.4", optional=true }
 
 [features]
-bench = [ "criterion" ]
+criterion = [ "dep:criterion" ]
 
 [[bench]]
 name = "bench1"
 harness = false
-
-[package.metadata.cargo-bench]
-#required-features = ["bench"]
+required-features = ["criterion"]
